@@ -1,3 +1,9 @@
+2009-10-14  Dan Fandrich <dan@coneharvesters.com>
+
+	* Changed the various functions searching for tags in ExifTagTable[]
+	  to use a binary search. This single change increases the speed of
+	  a run through the libexif-testsuite by 7%
+
 2009-10-13  Dan Fandrich <dan@coneharvesters.com>
 
 	* po/sv.po: Updated Swedish translation by Daniel Nylander
